# a2a-pydantic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
a2a_pydantic/: __init__.py  _base.py  _config.py  compat.py  enums.py  jsonrpc.py  models.py  proto.py
examples/: README.md  a2a_10_proto.py  a2a_10_proto_typed.py  fastapi_app.py  fastapi_version_header.py  round_trip.py
scripts/: generate_v10.ps1  resolve_refs.py
src/a2a_pydantic/: __init__.py  base.py  converters.py  converters_v10.py  from_proto.py  to_proto.py
src/a2a_pydantic/v03/: __init__.py  models.py
src/a2a_pydantic/v10/: __init__.py  models.py  parts.py
src/a2apydantic/: __init__.py  converters.py
src/a2apydantic/v03/: __init__.py  models.py
src/a2apydantic/v10/: __init__.py  models.py
tests/: conftest.py  test_agent_card.py  test_convert_to_v03.py  test_convert_to_v10.py  test_enums.py  test_env_var.py  test_ergonomics.py  test_error.py  test_jsonrpc.py  test_message_task.py  test_models.py  test_oneof_and_struct.py  test_part.py  test_proto_bridge.py  test_resolve_refs.py  test_resolve_refs_golden.py  test_send_message.py  test_stream_event.py  test_v10_parts.py
tests/fixtures/: schema_raw.json  schema_resolved.json
